Fixed styling and dark mode.

--- a/resources/css/input.css
+++ b/resources/css/input.css
@@ -94,7 +94,7 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-    @apply font-roboto text-gray-900 dark:text-gray-100;
+    @apply font-roboto text-gray-900 dark:text-gray-100 font-semibold;
 }
 
 .icon-container {
@@ -114,13 +114,17 @@ h1, h2, h3, h4, h5 {
     @apply w-full box-border grid grid-cols-12 gap-x-5 px-3 md:px-6 lg:px-10 max-w-screen-xl;
 }
 
-ul {
+.muted {
+    @apply text-gray-500 dark:text-gray-700;
+}
+
+.markdown ul {
     @apply list-disc;
 }
-ul ul {
+.markdown ul ul {
     @apply list-circle;
 }
-ul ul ul {
+.markdown ul ul ul {
     @apply list-square;
 }
 
@@ -129,7 +133,7 @@ ul ul ul {
 }
 
 .action-button {
-    @apply w-full mb-3 text-sm h-9 min-w-24 min-h-9 rounded p-1.5 transition;
+    @apply w-full mb-3 text-sm h-9 min-w-24 rounded p-1.5 transition;
 }
 
 iframe {
@@ -141,6 +145,25 @@ iframe {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+}
+
+h1 {
+    @apply text-4xl;
+}
+h2 {
+    @apply text-2xl;
+}
+h3 {
+    @apply text-lg;
+}
+h4 {
+    @apply text-base;
+}
+h5 {
+    @apply text-sm;
+}
+h6 {
+    @apply text-xs;
 }
 
 h2, .markdown .h1, .markdown h2, .markdown h3, .markdown h4, .markdown .h5, .markdown .h6 {
@@ -203,7 +226,7 @@ a:not(.action-button), .spoiler-button {
 }
 
 p a:not(.plain), span a:not(.plain) {
-    @apply text-primary-500 underline hover:decoration-none hover:text-primary-600;
+    @apply text-primary-500 underline hover:text-primary-600;
 }
 
 a.static, .static-link {
